Sound Handling, QR Code, Join Screen, Character Selection, Language Selection.
